--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FF000000</color>
+    <color name="colorPrimaryDark">#a91303</color>
+    <color name="colorent">#53db0a</color>
+    <color name="allplayer">#a91303</color>
+    <color name="black">#FF000000</color>
+
 </resources>
